--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,30 @@
 server {
     listen 80;
+    server_name localhost;
+    
+    location /media/ {
+        root /var/html;
+      }
+
+    location /static/admin {
+        root /var/html;
+      }
+
+     location /static/rest_framework/ {
+        root /var/html/;
+      }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+      }
+
+    location /api/ {
+        proxy_set_header Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+      }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
