--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
+      - redoc:/app/api/docs/
     depends_on:
       - db
     env_file:
