--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -18,7 +18,7 @@ server {
         proxy_pass http://backend:8000/admin/;
       }
 
-    location /api/docs/ {
+    location ^~ /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
