--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -32,8 +32,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ./redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ./openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
